--- a/TDA.ipynb
+++ b/TDA.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "TDA.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNrCL6xIOuDz6QS7KPB0SNy",
+      "authorship_tag": "ABX9TyMyo9Q0AeHEyqqPQRNGnCy3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,7 +45,7 @@
         "      self.no_habitacion = no_habitacion\r\n",
         "      "
       ],
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -59,7 +59,7 @@
         "    self.cliente = cliente\r\n",
         "    self.next = next"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -140,7 +140,7 @@
         "      while node.next:\r\n",
         "        print(node,cliente.nombre, end = \" => \")"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -240,6 +240,236 @@
       },
       "source": [
         "lista_de.eliminar(204)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2Q2ItVtscgLF"
+      },
+      "source": [
+        "Pilas"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "k_PZ8C7Cchtq"
+      },
+      "source": [
+        "class Pila:\r\n",
+        "  def _init_(self):\r\n",
+        "    self.pila = []\r\n",
+        "\r\n",
+        "  def apilar(self,cliente):\r\n",
+        "    self.pila.append(cliente)\r\n",
+        "\r\n",
+        "  def devolver_tamano(self):\r\n",
+        "    return len(self.pila)\r\n",
+        "\r\n",
+        "  def imprimir(self):\r\n",
+        "    for elemento in self.pila\r\n",
+        "      print(elemento.nombre, end = \" => \")\r\n",
+        "\r\n",
+        "  def desapilar(self):\r\n",
+        "    if (self.pila):\r\n",
+        "      self.pila.pop()"
+      ],
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 223
+        },
+        "id": "z2dnGHFrdVjo",
+        "outputId": "5b763b46-66ca-414a-de87-3f8162fbfc66"
+      },
+      "source": [
+        "c1 = cliente(\"Estuardo Zapeta\", 101)\r\n",
+        "c2 = cliente(\"Marco Lopez\", 103)\r\n",
+        "c3 = cliente(\"Josue Armas\", 204)\r\n",
+        "c4 = cliente(\"Gladys Olmos\", 382)"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-4-85a285c10a9d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mc1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcliente\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Estuardo Zapeta\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m101\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mc2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcliente\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Marco Lopez\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m103\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mc3\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcliente\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Josue Armas\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m204\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mc4\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcliente\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Gladys Olmos\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m382\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: object() takes no parameters"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "g0WeChxMdvCg"
+      },
+      "source": [
+        "p = Pila()\r\n",
+        "p.apilar(c1)\r\n",
+        "p.apilar(c2)\r\n",
+        "p.apilar(c3)\r\n",
+        "p.apilar(c4)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xjVOGr23fbrR"
+      },
+      "source": [
+        "p.devolver_tamano()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PA7d6bQxfevB"
+      },
+      "source": [
+        "p.imprimir()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pHn2_bxJgarU"
+      },
+      "source": [
+        "p.desapilar()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vVZtQxtCgcP8"
+      },
+      "source": [
+        "p.imprimir()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hos1MjgIiEOg"
+      },
+      "source": [
+        "Cola\r\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VBAtp3qJiFzf"
+      },
+      "source": [
+        "class Cola:\r\n",
+        "  def _init_(self):\r\n",
+        "    self.cola = []\r\n",
+        "\r\n",
+        "  def apilar(self,cliente):\r\n",
+        "    self.cola.append(cliente)\r\n",
+        "\r\n",
+        "  def devolver_tamano(self):\r\n",
+        "    return len(self.cola)\r\n",
+        "\r\n",
+        "  def imprimir(self):\r\n",
+        "    for elemento in self.cola:\r\n",
+        "      print(elemento.nombre, end = \" <= \")\r\n",
+        "\r\n",
+        "  def desapilar(self):\r\n",
+        "    if (self.cola):\r\n",
+        "      self.cola.pop(0)"
+      ],
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 223
+        },
+        "id": "ZqNPXxY2jFnw",
+        "outputId": "1da5147d-32fe-4f2e-8fd2-25bb1399449a"
+      },
+      "source": [
+        "c1 = cliente(\"Estuardo Zapeta\", 101)\r\n",
+        "c2 = cliente(\"Marco Lopez\", 103)\r\n",
+        "c3 = cliente(\"Josue Armas\", 204)\r\n",
+        "c4 = cliente(\"Gladys Olmos\", 382)"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-7-85a285c10a9d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mc1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcliente\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Estuardo Zapeta\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m101\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mc2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcliente\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Marco Lopez\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m103\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mc3\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcliente\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Josue Armas\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m204\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mc4\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcliente\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Gladys Olmos\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m382\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: object() takes no parameters"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-M95Sa8NjGEI"
+      },
+      "source": [
+        "c = Cola()\r\n",
+        "c.encolar(c1)\r\n",
+        "c.encolar(c2)\r\n",
+        "c.encolar(c3)\r\n",
+        "c.encolar(c4)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Va_K2tpsjMge"
+      },
+      "source": [
+        "c.devolver_tamano()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-xN_RILikMQF"
+      },
+      "source": [
+        "c.imprimir()"
       ],
       "execution_count": null,
       "outputs": []
